--- a/Exo2/CaddyFile
+++ b/Exo2/CaddyFile
@@ -1,5 +1,7 @@
 todo.exemple.localhost {
-	root * "C:\Users\ismaa\serveur-web\Exo2"
-	file_server browse
-	reverse_proxy localhost:3000
+    root * "C:\Users\ismaa\serveur-web\Exo2"
+    file_server browse
+    reverse_proxy localhost:3000
+
+    encode gzip brotli
 }
